--- a/examples/link prediction.ipynb
+++ b/examples/link prediction.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DATA Availability\n",
+    "\n",
+    "Data for these notebooks can be found here: https://github.com/VHRanger/Graph-Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -25,11 +34,10 @@
     "sys.path.append(os.path.realpath('..'))\n",
     "\n",
     "import nodevectors\n",
-    "import csrgraph\n",
-    "from csrgraph import CSRGraph\n",
+    "import csrgraph as cg\n",
     "from csrgraph import methods\n",
-    "import link_pred\n",
-    "import graph_eval\n",
+    "from nodevectors.evaluation import link_pred\n",
+    "from nodevectors.evaluation import graph_eval\n",
     "\n",
     "# From the related karateclub lib (on pip)\n",
     "# https://github.com/benedekrozemberczki/KarateClub\n",
@@ -76,10 +84,10 @@
     "#### Artificial random graphs\n",
     "# G = nx.binomial_graph(700, 0.6)\n",
     "# G, labels = graph_eval.make_cluster_graph(n_nodes=820, n_clusters=18, connections=1000, drop_pct=0.5)\n",
-    "# G, labels = graph_eval.make_weighed_cluster_graph(n_nodes=500, n_clusters=6, connections=1500, drop_pct=0.2, max_edge_weight=15)\n",
+    "G, labels = graph_eval.make_weighed_cluster_graph(n_nodes=500, n_clusters=6, connections=1500, drop_pct=0.2, max_edge_weight=15)\n",
     "#### Social graphs\n",
     "# G, labels = graph_eval.make_blogcatalog(dedupe=True)\n",
-    "G, mlabels = graph_eval.make_blogcatalog(dedupe=False)\n",
+    "# G, mlabels = graph_eval.make_blogcatalog(dedupe=False)\n",
     "# G, labels = graph_eval.make_email()\n",
     "# G, labels = graph_eval.get_karateclub(\"facebook\") # twitch, github, facebook, wikipedia\n",
     "# G = graph_eval.get_from_snap(url=\"http://snap.stanford.edu/data/facebook_combined.txt.gz\", sep=' ', header=None, comment='#')\n",
@@ -103,9 +111,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "multilabels: 39\n",
-      "Nodes: 10312\n",
-      "Edges: 333983\n",
+      "clusters: 6\n",
+      "Nodes: 500\n",
+      "Edges: 17668\n",
       "connected: True\n"
      ]
     }
@@ -135,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -144,16 +152,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loss: 0.0654\t:   2%|▏         | 102/6000 [00:01<01:52, 52.55it/s]\n"
+      "Loss: 0.4954\t:   2%|▏         | 101/6000 [00:02<02:51, 34.48it/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converged! Loss: 0.0651\n",
-      "Time: 4.0844\n",
-      "Link Prediction:\n"
+      "Converged! Loss: 0.4951\n",
+      "Time: 2.9698\n",
+      "Link Prediction:\n",
+      "\t(logit) AUC-ROC: 0.516, AUC-PR: 0.507, Acc: 0.511, F1: 0.512\n",
+      "\t(lgbm)  AUC-ROC: 0.734, AUC-PR: 0.707, Acc: 0.673, F1: 0.688\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.4937\t:   2%|▏         | 101/6000 [00:00<00:16, 352.27it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converged! Loss: 0.4954\n",
+      "MI: 0.18, RAND 0.30, FM: 0.30\n",
+      "Label Prediction:\n",
+      "\t(logit) Acc: 0.540, F1 micro: 0.540, F1 macro: 0.540\n",
+      "\t(lgbm) Acc: 0.450, F1 micro: 0.450, F1 macro: 0.450\n"
      ]
     }
    ],
@@ -183,23 +211,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Making walks... Done, T=2.40\n",
-      "Mapping Walk Names... Done, T=2.20\n",
-      "Training W2V... Done, T=7.31\n",
-      "Time: 14.3655\n",
+      "Making walks... Done, T=1.92\n",
+      "Mapping Walk Names... Done, T=0.10\n",
+      "Training W2V... Done, T=0.32\n",
+      "Time: 2.3881\n",
       "Link Prediction:\n",
-      "\t(logit) AUC-ROC: 0.951, AUC-PR: 0.948, Acc: 0.882, F1: 0.883\n",
-      "\t(lgbm)  AUC-ROC: 0.954, AUC-PR: 0.950, Acc: 0.888, F1: 0.890\n",
-      "Making walks... Done, T=0.33\n",
-      "Mapping Walk Names... Done, T=2.15\n",
-      "Training W2V... "
+      "\t(logit) AUC-ROC: 0.552, AUC-PR: 0.482, Acc: 0.539, F1: 0.534\n",
+      "\t(lgbm)  AUC-ROC: 0.948, AUC-PR: 0.930, Acc: 0.918, F1: 0.920\n",
+      "Making walks... Done, T=0.01\n",
+      "Mapping Walk Names... Done, T=0.13\n",
+      "Training W2V... Done, T=0.31\n",
+      "MI: 0.93, RAND 0.86, FM: 0.86\n",
+      "Label Prediction:\n",
+      "\t(logit) Acc: 0.940, F1 micro: 0.940, F1 macro: 0.940\n",
+      "\t(lgbm) Acc: 0.950, F1 micro: 0.950, F1 macro: 0.950\n"
      ]
     }
    ],
@@ -228,9 +260,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time: 0.0773\n",
+      "Link Prediction:\n",
+      "\t(logit) AUC-ROC: 0.528, AUC-PR: 0.463, Acc: 0.538, F1: 0.540\n",
+      "\t(lgbm)  AUC-ROC: 0.951, AUC-PR: 0.940, Acc: 0.928, F1: 0.928\n",
+      "MI: 0.87, RAND 0.82, FM: 0.82\n",
+      "Label Prediction:\n",
+      "\t(logit) Acc: 0.980, F1 micro: 0.980, F1 macro: 0.980\n",
+      "\t(lgbm) Acc: 0.990, F1 micro: 0.990, F1 macro: 0.990\n"
+     ]
+    }
+   ],
    "source": [
     "pne_params = dict(\n",
     "    n_components=N_COMPONENTS,\n",
@@ -252,9 +299,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00, 17.00it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time: 0.2583\n",
+      "Link Prediction:\n",
+      "\t(logit) AUC-ROC: 0.515, AUC-PR: 0.453, Acc: 0.565, F1: 0.599\n",
+      "\t(lgbm)  AUC-ROC: 0.957, AUC-PR: 0.939, Acc: 0.941, F1: 0.940\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00, 17.91it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MI: 1.00, RAND 1.00, FM: 1.00\n",
+      "Label Prediction:\n",
+      "\t(logit) Acc: 1.000, F1 micro: 1.000, F1 macro: 1.000\n",
+      "\t(lgbm) Acc: 1.000, F1 micro: 1.000, F1 macro: 1.000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "grarep_params = dict(\n",
     "    n_components=N_COMPONENTS,\n",
@@ -278,9 +367,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.0229\t:   4%|▍         | 228/6000 [00:02<01:11, 80.47it/s]\n",
+      "Loss: 0.0241\t:   0%|          | 7/6000 [00:00<01:27, 68.87it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converged! Loss: 0.0225\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.0158\t:   4%|▎         | 216/6000 [00:03<01:23, 69.54it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converged! Loss: 0.0156\n",
+      "Time: 6.0436\n",
+      "Link Prediction:\n",
+      "\t(logit) AUC-ROC: 0.534, AUC-PR: 0.465, Acc: 0.513, F1: 0.513\n",
+      "\t(lgbm)  AUC-ROC: 0.953, AUC-PR: 0.939, Acc: 0.931, F1: 0.932\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.0229\t:   4%|▎         | 218/6000 [00:02<01:07, 85.74it/s]\n",
+      "Loss: 0.0243\t:   0%|          | 7/6000 [00:00<01:32, 64.95it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converged! Loss: 0.0229\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.0155\t:   4%|▎         | 214/6000 [00:03<01:27, 66.29it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converged! Loss: 0.0155\n",
+      "MI: 1.00, RAND 1.00, FM: 1.00\n",
+      "Label Prediction:\n",
+      "\t(logit) Acc: 1.000, F1 micro: 1.000, F1 macro: 1.000\n",
+      "\t(lgbm) Acc: 1.000, F1 micro: 1.000, F1 macro: 1.000\n"
+     ]
+    }
+   ],
    "source": [
     "##### GraRep + GGVec ####\n",
     "grarep_params = dict(\n",
@@ -313,9 +469,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time: 3.8006\n",
+      "Link Prediction:\n",
+      "\t(logit) AUC-ROC: 0.541, AUC-PR: 0.472, Acc: 0.534, F1: 0.537\n",
+      "\t(lgbm)  AUC-ROC: 0.952, AUC-PR: 0.938, Acc: 0.939, F1: 0.939\n",
+      "MI: 1.00, RAND 1.00, FM: 1.00\n",
+      "Label Prediction:\n",
+      "\t(logit) Acc: 1.000, F1 micro: 1.000, F1 macro: 1.000\n",
+      "\t(lgbm) Acc: 1.000, F1 micro: 1.000, F1 macro: 1.000\n"
+     ]
+    }
+   ],
    "source": [
     "ump_params = dict(\n",
     "    embedder=umap.UMAP,\n",
@@ -337,9 +508,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|▏         | 76/6000 [00:02<02:54, 33.95it/s]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time: 2.9679\n",
+      "Virtual edges: 53851\n",
+      "Link Prediction:\n",
+      "\t(logit) AUC-ROC: 0.535, AUC-PR: 0.472, Acc: 0.527, F1: 0.525\n",
+      "\t(lgbm)  AUC-ROC: 0.944, AUC-PR: 0.936, Acc: 0.904, F1: 0.906\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  5%|▌         | 327/6000 [00:01<00:24, 236.32it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MI: 1.00, RAND 1.00, FM: 1.00\n",
+      "Label Prediction:\n",
+      "\t(logit) Acc: 1.000, F1 micro: 1.000, F1 macro: 1.000\n",
+      "\t(lgbm) Acc: 1.000, F1 micro: 1.000, F1 macro: 1.000\n"
+     ]
+    }
+   ],
    "source": [
     "### GLoVe with random walks ###\n",
     "glove_params = dict(\n",
@@ -353,23 +560,61 @@
     ")\n",
     "\n",
     "start_t = time.time()\n",
-    "wg = CSRGraph(G_train).random_walk_resample(walklen=RESAMPLE_LEN, epochs=RESAMPLE_WALKS)\n",
+    "wg = cg.csrgraph(G_train).random_walk_resample(walklen=RESAMPLE_LEN, epochs=RESAMPLE_WALKS)\n",
     "w_train = nodevectors.Glove(**glove_params).fit_transform(wg)\n",
     "\n",
     "print(f\"Time: {time.time() - start_t :.4f}\")\n",
     "print(f\"Virtual edges: {wg.dst.size}\")\n",
     "result = link_pred.LinkPrediction(w_train, G, G_train, testing_pos_edges)\n",
     "if HAS_LABELS:\n",
-    "    wg = CSRGraph(G).random_walk_resample(walklen=RESAMPLE_LEN, epochs=RESAMPLE_WALKS)\n",
+    "    wg = cg.csrgraph(G).random_walk_resample(walklen=RESAMPLE_LEN, epochs=RESAMPLE_WALKS)\n",
     "    w = nodevectors.Glove(**glove_params).fit_transform(wg)\n",
     "    graph_eval.print_labeled_tests(w, y, test_size=TEST_SIZE, seed=SEED)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.2861\t:  16%|█▌        | 967/6000 [00:05<00:26, 188.58it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converged! Loss: 0.2859\n",
+      "Time: 5.6420\n",
+      "Virtual edges: 54151\n",
+      "Link Prediction:\n",
+      "\t(logit) AUC-ROC: 0.534, AUC-PR: 0.485, Acc: 0.527, F1: 0.530\n",
+      "\t(lgbm)  AUC-ROC: 0.958, AUC-PR: 0.944, Acc: 0.937, F1: 0.937\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.2796\t:  15%|█▌        | 911/6000 [00:03<00:18, 270.13it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converged! Loss: 0.2795\n",
+      "MI: 1.00, RAND 1.00, FM: 1.00\n",
+      "Label Prediction:\n",
+      "\t(logit) Acc: 1.000, F1 micro: 1.000, F1 macro: 1.000\n",
+      "\t(lgbm) Acc: 0.990, F1 micro: 0.990, F1 macro: 0.990\n"
+     ]
+    }
+   ],
    "source": [
     "### GGVec with random walks ###\n",
     "ggvec_params = dict(\n",
@@ -384,14 +629,14 @@
     ")\n",
     "\n",
     "start_t = time.time()\n",
-    "wg = CSRGraph(G_train).random_walk_resample(walklen=RESAMPLE_LEN, epochs=RESAMPLE_WALKS)\n",
+    "wg = cg.csrgraph(G_train).random_walk_resample(walklen=RESAMPLE_LEN, epochs=RESAMPLE_WALKS)\n",
     "w_train = wg.ggvec(**ggvec_params)\n",
     "\n",
     "print(f\"Time: {time.time() - start_t :.4f}\")\n",
     "print(f\"Virtual edges: {wg.dst.size}\")\n",
     "result = link_pred.LinkPrediction(w_train, G, G_train, testing_pos_edges)\n",
     "if HAS_LABELS:\n",
-    "    wg = CSRGraph(G).random_walk_resample(walklen=RESAMPLE_LEN, epochs=RESAMPLE_WALKS)\n",
+    "    wg = cg.csrgraph(G).random_walk_resample(walklen=RESAMPLE_LEN, epochs=RESAMPLE_WALKS)\n",
     "    w = wg.ggvec(**ggvec_params)\n",
     "    graph_eval.print_labeled_tests(w, y, test_size=TEST_SIZE, seed=SEED)"
    ]
