--- a/examples/link prediction.ipynb
+++ b/examples/link prediction.ipynb
@@ -4,16 +4,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DATA Availability\n",
+    "# Research Notes:\n",
     "\n",
-    "Data for these notebooks can be found here: https://github.com/VHRanger/Graph-Data"
+    "Here, we implement empirical measurements of graph embedding algorithms. We implement multiple methods:\n",
+    "\n",
+    "1) Link Prediction. This is done for all graphs. We remove a fixed % of edges in the graph and predict missing links in the graph. We train a logistic regression and LightGBM gradient boosted decision tree to predict the edges and report their AUC, accuracy and F1 score.\n",
+    "\n",
+    "2) Clustering (on graphs with community/cluster labels). We use hierarchical agglomerative clustering on the graph embeddings and measure overlap of the embedding with the real-world communities in the network. Agglomerative Hierarchical clustering is chosen because it is deterministic and not sensitive to cluster shape or scaling or embedding metric space. We measure overlap with RAND index, mutual information score and Fowlkes-Mallows score.\n",
+    "\n",
+    "3) Label prediction. This can be multilabel classifications (for graphs where a node can be in multiple groups) or regular classification performance. We train a logistic regression and LightGBM gradient boosted decision tree to predict the labels and report their AUC, accuracy and F1 score.\n",
+    "\n",
+    "\n",
+    "### First vs Second Order:\n",
+    "\n",
+    "We see a sharp divide in empirical performance along first-order and higher-order graph embedding methods.\n",
+    "\n",
+    "**First order** methods directly minimize the distance between nodes and their neighbours. Most graph embedding methods that are based around adjacency matrix factorization (laplacian eigenmaps, SVD, etc.) are first order.\n",
+    "\n",
+    "\n",
+    "**Higher order** methods take in account deeper graph structure. For instance, a *second order* method would account for neighbors-of-neighbors in each node's embeddings. 3rd and higher order deepen this relationship.\n",
+    "\n",
+    "Note that you can do higher order embedding through graph factorization algorithms by augmenting the graph adjacency matrix. \n",
+    "\n",
+    "For instance, one of the methods tested below samples random walks on the graph and generates a co-occurence matrix from these samples to train GLoVe (a first order algorithm). GGVec and GraRep generate higher-order adjacency matrices by taking the dot product of the graph's random walk markov chain transition matrix with itself, then taking a first order embedding method on that.\n",
+    "\n",
+    "Methods based around random walks + word2vec (deepwalk, node2vec, etc.) are naturally higher order methods. The order can be constrained by reducing the word2vec window, or restricting walk length to be extremely short.\n",
+    "\n",
+    "### Findings\n",
+    "\n",
+    "We find that first-order methods generally perform better on clustering and label prediction than higher-order methods. Recommended first order methods are GGVec and ProNE.\n",
+    "\n",
+    "On the other hand, higher order methods perform better on the link prediction task. Interestingly, the gap in link prediction performance is inexistant for artificially created graphs. This suggests higher order methods do learn some of the structure of real world graphs.\n",
+    "\n",
+    "These results put in context that it's important to have a diversity of downstream tasks when evaluating embedding models.\n",
+    "\n",
+    "### GGVec\n",
+    "\n",
+    "We develop GGVec, a first (and higher) order embedding algorithm.\n",
+    "\n",
+    "This method is very fast and scalable for large graphs by directly minimizing distange between nodes with edges (like GLoVe). It is naturally a first-order method but can be made higher order through the method mentionned above (dot product of graph transition matrix). Scaling of higher-order is worse however.\n",
+    "\n",
+    "Moreover, this is the first algorithm that can embed directly from an edgelist file (because minimization loop is per-edge). This remains to be implemented."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'evaluation' from 'nodevectors' (/Users/mranger/anaconda3/lib/python3.7/site-packages/nodevectors/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-0feafe7d974e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrealpath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'..'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mnodevectors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcsrgraph\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcsrgraph\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmethods\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/nodevectors/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnodevectors\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0membedders\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mnodevectors\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mevaluation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnodevectors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0membedders\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSKLearnEmbedder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnodevectors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnode2vec\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mNode2Vec\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnodevectors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mggvec\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGGVec\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'evaluation' from 'nodevectors' (/Users/mranger/anaconda3/lib/python3.7/site-packages/nodevectors/__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "import gc\n",
     "import networkx as nx\n",
@@ -39,9 +90,6 @@
     "from nodevectors.evaluation import link_pred\n",
     "from nodevectors.evaluation import graph_eval\n",
     "\n",
-    "# From the related karateclub lib (on pip)\n",
-    "# https://github.com/benedekrozemberczki/KarateClub\n",
-    "from karateclub.node_embedding.neighbourhood import GraRep, NodeSketch, Walklets\n",
     "# UMAP to test (on pip)\n",
     "import umap\n",
     "\n",
@@ -58,12 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#### CONFIG\n",
-    "N_COMPONENTS = 6 # resulting embedding dim\n",
+    "N_COMPONENTS = 64 # resulting embedding dim\n",
     "SEED = 42 # RNG Seed\n",
     "TEST_SIZE = 0.2\n",
     "\n",
@@ -73,10 +121,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Data Availability\n",
+    "\n",
+    "Data for these notebooks can be found here: https://github.com/VHRanger/Graph-Data\n",
+    "Just download it and point the graph generation methods below to it\n",
+    "\n",
+    "The data is in a different repo to avoid polluting the pip package."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'graph_eval' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-6e37c1c320da>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# G, labels = graph_eval.make_blogcatalog(dedupe=True)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# G, mlabels = graph_eval.make_blogcatalog(dedupe=False)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgraph_eval\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake_email\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;31m# G, labels = graph_eval.get_karateclub(\"facebook\") # twitch, github, facebook, wikipedia\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# G = graph_eval.get_from_snap(url=\"http://snap.stanford.edu/data/facebook_combined.txt.gz\", sep=' ', header=None, comment='#')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'graph_eval' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#### GRAPHS\n",
     "#### Uncomment one to choose which graph to run evaluation on\n",
@@ -84,11 +156,11 @@
     "#### Artificial random graphs\n",
     "# G = nx.binomial_graph(700, 0.6)\n",
     "# G, labels = graph_eval.make_cluster_graph(n_nodes=820, n_clusters=18, connections=1000, drop_pct=0.5)\n",
-    "G, labels = graph_eval.make_weighed_cluster_graph(n_nodes=500, n_clusters=6, connections=1500, drop_pct=0.2, max_edge_weight=15)\n",
+    "# G, labels = graph_eval.make_weighed_cluster_graph(n_nodes=500, n_clusters=6, connections=1500, drop_pct=0.2, max_edge_weight=15)\n",
     "#### Social graphs\n",
     "# G, labels = graph_eval.make_blogcatalog(dedupe=True)\n",
     "# G, mlabels = graph_eval.make_blogcatalog(dedupe=False)\n",
-    "# G, labels = graph_eval.make_email()\n",
+    "G, labels = graph_eval.make_email()\n",
     "# G, labels = graph_eval.get_karateclub(\"facebook\") # twitch, github, facebook, wikipedia\n",
     "# G = graph_eval.get_from_snap(url=\"http://snap.stanford.edu/data/facebook_combined.txt.gz\", sep=' ', header=None, comment='#')\n",
     "#### Biology Graphs\n",
@@ -647,6 +719,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# From the related karateclub lib (on pip)\n",
+    "# https://github.com/benedekrozemberczki/KarateClub\n",
+    "# from karateclub.node_embedding.neighbourhood import NodeSketch, Walklets\n",
+    "\n",
     "###### Slooooowwwwwww ########\n",
     "# walklets_params = dict(\n",
     "#     walk_number=10, \n",
