--- a/examples/link prediction.ipynb
+++ b/examples/link prediction.ipynb
@@ -32,11 +32,13 @@
     "\n",
     "### Findings\n",
     "\n",
-    "We find that first-order methods generally perform better on clustering and label prediction than higher-order methods. Recommended first order methods are GGVec and ProNE. In fact, for some graphs, higher-order methods do not cluster at all around communities.\n",
+    "We find that first-order methods generally perform better on clustering and label prediction than higher-order methods. Recommended first order methods are GGVec and ProNE.\n",
     "\n",
     "On the other hand, higher order methods perform better on the link prediction task. Interestingly, the gap in link prediction performance is inexistant for artificially created graphs. This suggests higher order methods do learn some of the structure intrinsic to real world graphs.\n",
     "\n",
     "These results put in context that it's important to have a diversity of downstream tasks when evaluating embedding models.\n",
+    "\n",
+    "Moreover, we find that neural-net based methods (deepwalk, node2vec and descendants) are extremely inefficient with respect to output dimensions. They tend to perform much worse with smaller number of output dimensions.\n",
     "\n",
     "### GGVec\n",
     "\n",
